--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html><head><title>不昨。。。</title></head>
 <body>
-<script language='javascript'>document.location = 'http://119.34.178.41:8080/phpmyadmin/index.php'</script>
+<script language='javascript'>document.location = 'http://119.34.178.41:8080'</script>
 </body>
 </html>
